--- a/_config.json
+++ b/_config.json
@@ -1,6 +1,7 @@
 {
   "prefix": "!",
   "token": "YOUR_BOTS_TOKEN_HERE",
+  "website": "https://LINK.TO.WEBSITE/",
   "ownerID": "YOUR_DISCORD_USER_ID (optional)",
   "autorole": "ROLE_ID_HERE (optional)"
 }
